do not crash on exit due to routing profile config widgets being still around

Only create temporary objects of RoutingProfileSettingsDialog, such that the profile runner's config widgets are destroyed before all plugins are unloaded.

Credits to Anton Chernov for figuring out the root cause of the bug.

BUG: 279364